# Hacktor_Basic

./: CMakeLists.txt  README.md  app.overlay  prj.conf  zephyr-v4.3.99-arch-setup.sh  zephyr-v4.3.99-ubuntu-setup.sh
src/: app_state.h  backlight.c  backlight.h  battery_monitor.c  battery_monitor.h  display_manager.c  display_manager.h  graphics.c  graphics.h  imu.c  imu.h  info_screen.c  info_screen.h  main.c  power_manager.c  power_manager.h  steps.c  steps.h  system_stats.c  system_stats.h  time_keeper.c  time_keeper.h  watchface.c  watchface.h
